force-app/main/default/objects/Lead/fields/Company_Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>Company_Creation_Date__c</fullName>
    <label>Company Creation Date</label>
    <type>Date</type>
</CustomField>