force-app/main/default/objects/Lead/fields/Company_Jurisdiction__c.field-meta.xml
<CustomField>
    <fullName>Company_Jurisdiction__c</fullName>
    <label>Company Jurisdiction</label>
    <length>50</length>
    <type>Text</type>
</CustomField>