force-app/main/default/objects/Lead/fields/Company_Status__c.field-meta.xml
<CustomField>
    <fullName>Company_Status__c</fullName>
    <label>Company Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>