force-app/main/default/objects/Lead/fields/Current_Mobile_Network__c.field-meta.xml
<CustomField>
    <fullName>Current_Mobile_Network__c</fullName>
    <label>Current Mobile Network</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BT</fullName>
            </value>
            <value>
                <fullName>EE</fullName>
            </value>
            <value>
                <fullName>O2</fullName>
            </value>
            <value>
                <fullName>O2 Plan</fullName>
            </value>
            <value>
                <fullName>Three</fullName>
            </value>
            <value>
                <fullName>Virgin</fullName>
            </value>
            <value>
                <fullName>Vodafone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>