force-app/main/default/objects/Lead/fields/Current_Mobile_Reseller__c.field-meta.xml
<CustomField>
    <fullName>Current_Mobile_Reseller__c</fullName>
    <label>Current Mobile Reseller</label>
    <length>50</length>
    <type>Text</type>
</CustomField>