force-app/main/default/objects/Lead/fields/Current_Network__c.field-meta.xml
<CustomField>
    <fullName>Current_Network__c</fullName>
    <label>Current Network</label>
    <length>50</length>
    <type>Text</type>
</CustomField>