force-app/main/default/objects/Lead/fields/Current_Phone_System_Maintainer__c.field-meta.xml
<CustomField>
    <fullName>Current_Phone_System_Maintainer__c</fullName>
    <label>Current Phone System Maintainer</label>
    <length>50</length>
    <type>Text</type>
</CustomField>