force-app/main/default/objects/Lead/fields/Current_Telecom_Applications__c.field-meta.xml
<CustomField>
    <fullName>Current_Telecom_Applications__c</fullName>
    <description>Please advise which telecoms applications are used with the phone system currently in place</description>
    <inlineHelpText>Please advise which telecoms applications are used with the phone system currently in place</inlineHelpText>
    <label>Current Telecom Applications</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Auto Attendant</fullName>
            </value>
            <value>
                <fullName>Contact Centre</fullName>
            </value>
            <value>
                <fullName>Mobility</fullName>
            </value>
            <value>
                <fullName>Reporting</fullName>
            </value>
            <value>
                <fullName>Recording</fullName>
            </value>
            <value>
                <fullName>Remote Working</fullName>
            </value>
            <value>
                <fullName>Voicemail</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>