force-app/main/default/objects/Lead/fields/DDI__c.field-meta.xml
<CustomField>
    <fullName>DDI__c</fullName>
    <label>DDI</label>
    <type>Phone</type>
</CustomField>