force-app/main/default/objects/Lead/fields/ddm__ScoreLabel__c.field-meta.xml
<CustomField>
    <fullName>ddm__ScoreLabel__c</fullName>
    <description>The label you&apos;ve set for the score of this lead</description>
    <inlineHelpText>The label you&apos;ve set for the score of this lead</inlineHelpText>
    <label>Score Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>