force-app/main/default/objects/Lead/fields/Delay_Reason__c.field-meta.xml
<CustomField>
    <fullName>Delay_Reason__c</fullName>
    <label>Delay Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cannot Serve - API Access</fullName>
            </value>
            <value>
                <fullName>Cannot Serve - Layer 2</fullName>
            </value>
            <value>
                <fullName>Cannot Serve - Other</fullName>
            </value>
            <value>
                <fullName>Holding - Network upgrade required</fullName>
            </value>
            <value>
                <fullName>Holding - Developing systems</fullName>
            </value>
            <value>
                <fullName>Holding - Company Change</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>