force-app/main/default/objects/Lead/fields/Disqualified_Reason__c.field-meta.xml
<CustomField>
    <fullName>Disqualified_Reason__c</fullName>
    <description>Reason for the lead becoming disqualified</description>
    <label>Disqualified Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No interest</fullName>
            </value>
            <value>
                <fullName>FTTP not available</fullName>
                <label>FTTP Not Available</label>
            </value>
            <value>
                <fullName>Residential</fullName>
            </value>
            <value>
                <fullName>Credit Check Failed</fullName>
            </value>
            <value>
                <fullName>Duplicate Contact</fullName>
            </value>
            <value>
                <fullName>HQ Overseas</fullName>
            </value>
            <value>
                <fullName>Located in serviced Office</fullName>
            </value>
            <value>
                <fullName>Location not served by us</fullName>
            </value>
            <value>
                <fullName>No longer in business</fullName>
            </value>
            <value>
                <fullName>Parent group makes decisions</fullName>
            </value>
            <value>
                <fullName>Price Benchmarking</fullName>
            </value>
            <value>
                <fullName>Too Large</fullName>
            </value>
            <value>
                <fullName>Too Small</fullName>
            </value>
            <value>
                <fullName>Uncontactable</fullName>
            </value>
            <value>
                <fullName>Unsubscribe from e-mail</fullName>
            </value>
            <value>
                <fullName>Unsuitable customer industry</fullName>
            </value>
            <value>
                <fullName>Wrong Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>