force-app/main/default/objects/Lead/fields/Email_opt_in__c.field-meta.xml
<CustomField>
    <fullName>Email_opt_in__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Have they opted in to receiving communications from us?</description>
    <label>Email Opt In</label>
    <type>Checkbox</type>
</CustomField>