force-app/main/default/objects/Lead/fields/Engagement_Persona__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Persona__c</fullName>
    <label>Engagement Persona</label>
    <length>50</length>
    <type>Text</type>
</CustomField>