force-app/main/default/objects/Lead/fields/Industry_Description__c.field-meta.xml
<CustomField>
    <fullName>Industry_Description__c</fullName>
    <label>Industry Description</label>
    <length>50</length>
    <type>Text</type>
</CustomField>