force-app/main/default/objects/Lead/fields/Internet_Contract_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Internet_Contract_Expiry_Date__c</fullName>
    <label>Internet Contract Expiry Date</label>
    <type>Date</type>
</CustomField>