force-app/main/default/objects/Lead/fields/Internet_Service_Description__c.field-meta.xml
<CustomField>
    <fullName>Internet_Service_Description__c</fullName>
    <inlineHelpText>What is the current service speeds, bearer, term, underlying carrier etc and any useful info about their current service.</inlineHelpText>
    <label>Internet Service Description</label>
    <type>TextArea</type>
</CustomField>