force-app/main/default/objects/Lead/fields/Lead_Interest_Other__c.field-meta.xml
<CustomField>
    <fullName>Lead_Interest_Other__c</fullName>
    <label>Lead Interest Other</label>
    <length>50</length>
    <type>Text</type>
</CustomField>