force-app/main/default/objects/Lead/fields/Locations_of_Focus__c.field-meta.xml
<CustomField>
    <fullName>Locations_of_Focus__c</fullName>
    <label>Locations of Focus</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aberdeen</fullName>
            </value>
            <value>
                <fullName>Barnsley</fullName>
            </value>
            <value>
                <fullName>Bath</fullName>
            </value>
            <value>
                <fullName>Blackburn</fullName>
            </value>
            <value>
                <fullName>Blackpool</fullName>
            </value>
            <value>
                <fullName>Bolton</fullName>
            </value>
            <value>
                <fullName>Bournemouth</fullName>
            </value>
            <value>
                <fullName>Bracknell</fullName>
            </value>
            <value>
                <fullName>Bradford</fullName>
            </value>
            <value>
                <fullName>Brighton &amp; Hove</fullName>
            </value>
            <value>
                <fullName>Bury St Edmunds</fullName>
            </value>
            <value>
                <fullName>Cambridge</fullName>
            </value>
            <value>
                <fullName>Chatham &amp; Gillingham</fullName>
            </value>
            <value>
                <fullName>Cheltenham &amp; Charlton Kings</fullName>
            </value>
            <value>
                <fullName>Chester</fullName>
            </value>
            <value>
                <fullName>Chesterfield</fullName>
            </value>
            <value>
                <fullName>Chichester &amp; Arun</fullName>
            </value>
            <value>
                <fullName>Coventry</fullName>
            </value>
            <value>
                <fullName>Crawley &amp; Horsham</fullName>
            </value>
            <value>
                <fullName>Derby</fullName>
            </value>
            <value>
                <fullName>Dewsbury</fullName>
            </value>
            <value>
                <fullName>Doncaster</fullName>
            </value>
            <value>
                <fullName>Dundee</fullName>
            </value>
            <value>
                <fullName>Eastbourne</fullName>
            </value>
            <value>
                <fullName>Edinburgh</fullName>
            </value>
            <value>
                <fullName>Gateshead</fullName>
            </value>
            <value>
                <fullName>Glasgow</fullName>
            </value>
            <value>
                <fullName>Gloucester</fullName>
            </value>
            <value>
                <fullName>Great Yarmouth</fullName>
            </value>
            <value>
                <fullName>Halifax</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>