force-app/main/default/objects/Lead/fields/M12_Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>M12_Lead_ID__c</fullName>
    <description>Unique ID for each lead</description>
    <displayFormat>L-{0000000}</displayFormat>
    <externalId>true</externalId>
    <label>GN Lead ID</label>
    <type>AutoNumber</type>
</CustomField>