force-app/main/default/objects/Lead/fields/Maintenance_Contract_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_Contract_Expiry_Date__c</fullName>
    <label>Maintenance Contract Expiry Date</label>
    <type>Date</type>
</CustomField>