force-app/main/default/objects/Lead/fields/Marketing_Cloud_Sync__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Cloud_Sync__c</fullName>
    <formula>NOT(OR(
ISPICKVAL(LeadSource , &quot;Data - Free&quot;),
ISPICKVAL(LeadSource , &quot;Data - Paid&quot;),
ISPICKVAL(LeadSource , &quot;Paid Lead Provider&quot;),
ISPICKVAL( Status, &quot;Disqualified&quot;),
ISBLANK(Email), 
IF(HasOptedOutOfEmail = True, True, False),
IF(IsConverted = False, False, True)
))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marketing Cloud Sync</label>
    <type>Checkbox</type>
</CustomField>