force-app/main/default/objects/Lead/fields/Monthly_Ethernet_Run_Rate__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Ethernet_Run_Rate__c</fullName>
    <label>Monthly Ethernet Run Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>