force-app/main/default/objects/Lead/fields/Network_Contract_Exp_Date__c.field-meta.xml
<CustomField>
    <fullName>Network_Contract_Exp_Date__c</fullName>
    <label>Network Contract Exp Date</label>
    <type>Date</type>
</CustomField>