force-app/main/default/objects/Lead/fields/No_of_Company_Sites__c.field-meta.xml
<CustomField>
    <fullName>No_of_Company_Sites__c</fullName>
    <description>Number of Company Sites</description>
    <label>No of Company Sites</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>