force-app/main/default/objects/Lead/fields/Number_of_Contact_Centre_Agents__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Contact_Centre_Agents__c</fullName>
    <label>Number of Contact Centre Agents</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>