force-app/main/default/objects/Lead/fields/Other_Industry__c.field-meta.xml
<CustomField>
    <fullName>Other_Industry__c</fullName>
    <label>Other Industry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>