force-app/main/default/objects/Lead/fields/Other_Phone_System__c.field-meta.xml
<CustomField>
    <fullName>Other_Phone_System__c</fullName>
    <label>Other Phone System</label>
    <length>50</length>
    <type>Text</type>
</CustomField>