force-app/main/default/objects/Lead/fields/Paid_Lead__c.field-meta.xml
<CustomField>
    <fullName>Paid_Lead__c</fullName>
    <description>An ID associated with this lead from the paid lead source</description>
    <inlineHelpText>An ID associated with this lead from the paid lead source</inlineHelpText>
    <label>Paid Lead Reference ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>