force-app/main/default/objects/Lead/fields/Paid_Lead_License_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>Paid_Lead_License_Expiry_Date__c</fullName>
    <description>The date that this paid lead&apos;s license expires and we have to purge from our system if we have not contacted them</description>
    <inlineHelpText>The date that this paid lead&apos;s license expires and we have to purge from our system if we have not contacted them</inlineHelpText>
    <label>Paid Lead License Expiry Date</label>
    <type>Date</type>
</CustomField>