force-app/main/default/objects/Lead/fields/Phone_System_Age__c.field-meta.xml
<CustomField>
    <fullName>Phone_System_Age__c</fullName>
    <label>Phone System Age</label>
    <type>Date</type>
</CustomField>