force-app/main/default/objects/Lead/fields/Phone_system_no_of_extensions__c.field-meta.xml
<CustomField>
    <fullName>Phone_system_no_of_extensions__c</fullName>
    <label>Phone system no of extensions</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>