force-app/main/default/objects/Lead/fields/Phone_System_Type__c.field-meta.xml
<CustomField>
    <fullName>Phone_System_Type__c</fullName>
    <label>Current Phone System Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hosted</fullName>
            </value>
            <value>
                <fullName>Traditional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>