force-app/main/default/objects/Lead/fields/TPS__c.field-meta.xml
<CustomField>
    <fullName>TPS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TPS</label>
    <type>Checkbox</type>
</CustomField>