force-app/main/default/objects/Lead/fields/TPS_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>TPS_Expiry_Date__c</fullName>
    <description>What date does the TPS validity need checking again?</description>
    <inlineHelpText>What date does the TPS validity need checking again?</inlineHelpText>
    <label>TPS Expiry Date</label>
    <type>Date</type>
</CustomField>