force-app/main/default/objects/Lead/fields/Type_of_Location__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Location__c</fullName>
    <description>Type of Company Location or Site</description>
    <label>Type of Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Head Office</fullName>
            </value>
            <value>
                <fullName>Regional Office</fullName>
            </value>
            <value>
                <fullName>Single Site</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>