force-app/main/default/objects/Lead/fields/Type_of_Network_Lines__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Network_Lines__c</fullName>
    <label>Type of Network Lines</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PSTN</fullName>
            </value>
            <value>
                <fullName>ISDN2</fullName>
            </value>
            <value>
                <fullName>ISDN30</fullName>
            </value>
            <value>
                <fullName>SIP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>