force-app/main/default/objects/Lead/fields/UTM__c.field-meta.xml
<CustomField>
    <fullName>UTM__c</fullName>
    <label>UTM</label>
    <length>30</length>
    <type>Text</type>
</CustomField>