force-app/main/default/objects/Lead/fields/WiFi_Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>WiFi_Contract_End_Date__c</fullName>
    <label>WiFi Contract End Date</label>
    <type>Date</type>
</CustomField>