force-app/main/default/objects/Lead/fields/WiFi_Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>WiFi_Manufacturer__c</fullName>
    <label>WiFi Manufacturer</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cisco</fullName>
            </value>
            <value>
                <fullName>Aruba</fullName>
            </value>
            <value>
                <fullName>HP</fullName>
            </value>
            <value>
                <fullName>Netgear</fullName>
            </value>
            <value>
                <fullName>Meraki</fullName>
            </value>
            <value>
                <fullName>Meru</fullName>
            </value>
            <value>
                <fullName>D-Link</fullName>
            </value>
            <value>
                <fullName>Ruckus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>