force-app/main/default/objects/Lead/fields/WLR_checked__c.field-meta.xml
<CustomField>
    <fullName>WLR_checked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Enter if you have checked on WLR portal number of lines</description>
    <label>WLR checked</label>
    <type>Checkbox</type>
</CustomField>