force-app/main/default/objects/Lead/fields/Zendesk__Create_in_Zendesk__c.field-meta.xml
<CustomField>
    <fullName>Zendesk__Create_in_Zendesk__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create in Zendesk</label>
    <type>Checkbox</type>
</CustomField>