force-app/main/default/objects/Lead/fields/Zendesk__isCreatedUpdatedFlag__c.field-meta.xml
<CustomField>
    <fullName>Zendesk__isCreatedUpdatedFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isCreatedUpdatedFlag</label>
    <type>Checkbox</type>
</CustomField>